k8s/base/domotica/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
spec:
  revisionHistoryLimit: 4
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: Always
        securityContext:
          privileged: true
        resources:
          limits:
            memory: 2Gi
            cpu: "1"
          requests:
            memory: 1Gi
            cpu: "0.2"
        volumeMounts:
        - name: ha-config
          mountPath: /config
        livenessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: ha-config
        persistentVolumeClaim:
          claimName: ha-config-pvc
      dnsConfig:
        options:
          - name: ndots
            value: "1"
