k8s/base/domotica/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-web
spec:
  type: LoadBalancer
  selector:
    app: homeassistant
  ports:
  - port: 8123
    targetPort: 8123
